<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingLeft="8dp"
    android:paddingEnd="8dp"
    android:paddingRight="8dp"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_city_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        style="@style/TextAppearance.AppCompat.Small"
        android:text="@string/city"/>

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_below="@+id/tv_city_label"
        style="@style/TextAppearance.AppCompat.Title"
        tools:text="city"/>

    <TextView
        android:id="@+id/tv_state_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_above="@+id/tv_state"
        android:layout_alignStart="@+id/tv_state"
        android:layout_alignLeft="@+id/tv_state"
        style="@style/TextAppearance.AppCompat.Small"
        android:text="@string/state"/>

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_alignBaseline="@+id/tv_time_zone"
        android:layout_toEndOf="@+id/tv_city"
        android:layout_toRightOf="@+id/tv_city"
        tools:text="state"/>

    <TextView
        android:id="@+id/tv_zip_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:layout_toLeftOf="@+id/tv_time_zone_label"
        android:layout_toStartOf="@+id/tv_time_zone_label"
        style="@style/TextAppearance.AppCompat.Small"
        android:text="@string/zip_code"/>

    <TextView
        android:id="@+id/tv_zip_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignStart="@+id/tv_zip_code_label"
        android:layout_alignLeft="@+id/tv_zip_code_label"
        android:layout_below="@+id/tv_zip_code_label"
        tools:text="zipcode"/>

    <TextView
        android:id="@+id/tv_time_zone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"

        android:layout_toLeftOf="@+id/tv_area_code_label"
        android:layout_toStartOf="@+id/tv_area_code_label"
        style="@style/TextAppearance.AppCompat.Small"
        android:text="@string/time_zone"/>

    <TextView
        android:id="@+id/tv_time_zone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignStart="@+id/tv_time_zone_label"
        android:layout_alignLeft="@+id/tv_time_zone_label"
        android:layout_below="@+id/tv_time_zone_label"
        tools:text="TZ"/>

    <TextView
        android:id="@+id/tv_area_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        style="@style/TextAppearance.AppCompat.Small"
        android:text="@string/area_code"/>

    <TextView
        android:id="@+id/tv_area_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignStart="@+id/tv_area_code_label"
        android:layout_alignLeft="@+id/tv_area_code_label"
        android:layout_below="@+id/tv_area_code_label"
        tools:text="AC"/>

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dadada"
        android:layout_below="@+id/tv_time_zone" />

</RelativeLayout>